--- a/bower.json
+++ b/bower.json
@@ -6,5 +6,6 @@
   "dependencies": {
     "polymer": "Polymer/polymer#master",
     "key.mongo$doesnt.like": "Periods and dollar signs need to be escaped in Mongo keys"
-  }
+  },
+  "main": "custom-main-page.html"
 }
