Fix typo in test bower.json.

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-element-A",
+  "name": "test-element-a",
   "description": "Test element A for unit tests",
   "version": "0.0.1",
   "license": "MIT",
